service-mesh-yamls/deployment-1.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend-v1

spec:

  replicas: 2

  selector:
    matchLabels:
      app: backend
      version: v1


  template:

    metadata:

      labels:

        app: backend
        version: v1


    spec:

      containers:

      - name: backend

        image: nginx

        ports:

        - containerPort: 80
