service-mesh-yamls/deployment-2.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend-v2


spec:

  replicas: 2


  selector:

    matchLabels:

      app: backend
      version: v2


  template:

    metadata:

      labels:

        app: backend
        version: v2


    spec:

      containers:

      - name: backend

        image: nginx

        ports:

        - containerPort: 80
