service-mesh-yamls/istio-gateway.yml
apiVersion: networking.istio.io/v1

kind: Gateway


metadata:

  name: app-gateway



spec:


  selector:

    istio: ingressgateway



  servers:


  - port:


      number: 80

      name: http

      protocol: HTTP



    hosts:


    - "*"
