service-mesh-yamls/DestinationRule.yml
apiVersion: networking.istio.io/v1

kind: DestinationRule


metadata:

  name: backend-dr


spec:


  host:

    backend-service



  subsets:


  - name: v1

    labels:

      version: v1



  - name: v2

    labels:

      version: v2
