service-mesh-yamls/virtualservice.yml
apiVersion: networking.istio.io/v1

kind: VirtualService


metadata:

  name: backend-vs



spec:


  hosts:


  - backend-service



  http:


  - route:


    - destination:


        host: backend-service

        subset: v1


      weight: 80



    - destination:


        host: backend-service

        subset: v2


      weight: 20
